Mon Mar 02 02:07:52 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: fix bad drawing of very vertical functions.  Our
	  new hack in gtkextra handles lines way off screen more sanely so
	  we needent worry much here.

Fri Feb 27 14:42:12 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/mpwrap.[ch], src/funclib.c: remove the dependence on the MPF
	  compat layer.  Inline a few more functions.  Implement mpwl_eql
	  to make comparisons of rationals quicker.  Remove certain old
	  gmp/mpfr bug workarounds, a bit of cleanup

	* src/matop.c: in the mul_sub_row, cache the tmp variable for
	  greater speed.

Thu Feb 26 18:40:16 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.c: don't kill newlines in descriptions.  This is no longer
	  a problem.  Further reduces startup time by a tiny bit.

Thu Feb 26 02:34:54 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.c: fix crash of string dumping

Thu Feb 26 02:27:06 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/eval.c, src/calc.c, src/dict.[ch], src/gnome-genius.h,
	  src/structs.h, src/symbolic.c: store uncompiled string in the
	  token, not in a separate hash table.  This avoids extra lookups
	  during startup.

	* src/calc.c: a bit more optimization for help initialization

Thu Feb 26 00:54:16 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: handle crashes of the readline-helper without
	  hanging.  Slight reorganization of startup to show window few
	  nanoseconds faster.  Also don't use gtk_show_uri yet.  This
	  causes backwards binary incompatibility which sucks as my other
	  laptop uses hardy.

	* src/calc.c: slight improvement in help handling.  Don't sort
	  the functions in the categories until we really need to.

	* src/dict.c: when checking for similar id's do the sum and a square
	  sum to check for reorderings.  This fixes the strange suggestions
	  sometimes

	* src/genius-readline-helper.c: avoid crashes on getting SIGINT, ignore
