@@ -28,6 +28,8 @@ INCLUDES = \
 	$(GSV_CFLAGS)						\
 	$(EXTRA_WARNING_CFLAGS)
 
+AM_CFLAGS = $(PGO_CFLAGS)
+
 bin_PROGRAMS = @GNOME_GENIUS@ genius
 
 libexec_PROGRAMS = @GENIUS_READLINE_HELPER_FIFO@
