@@ -12,6 +12,8 @@ Changes to 1.0.6
 * Fix line plot scale precision in case the x and y axis have very different
   scales
 * Remove dependence on libgnome/ui
+* Some optimizations
+* Several other minor bugfixes
 * Translation updates
 
 Changes to 1.0.5
