@@ -1,3 +1,11 @@
+Mon Mar 02 02:38:40 2009  Jiri (George) Lebl <jirka@5z.com>
+
+	* **/Makefile.am: implement profile-generate and profile-use
+	  target for profile guided optimization.  Not quite all working
+	  I don't think, but simple tests produce impressive results.
+
+	* gtkextra/gtkplotflux.c: fix bad use of snprintf
+
 Mon Mar 02 02:07:52 2009  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/graphing.c: fix bad drawing of very vertical functions.  Our
